--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-            <version>5.1.49</version>
+<!--            <scope>runtime</scope>-->
+            <version>5.1.47</version>
         </dependency>
 
         <dependency>
